# Vertex

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  vertexc.py
examples/: hello.vx  loop.vx
src/vertex/: __init__.py  __main__.py  cli.py  codegen.py  lexer.py  parser.py
test/: concat.vx  conditionals.vx
tests/: test_integration.py
